--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
     <header>
@@ -19,7 +19,9 @@
         data-bs-theme="dark"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <!-- left -->
+          <a class="navbar-brand" href="#">QuizzForge</a>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -31,38 +33,21 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
+
+          <!-- Main content inside navbar -->
+          <div
+            class="collapse navbar-collapse justify-content-between"
+            id="navbarSupportedContent"
+          >
+            <!-- Empty div to push search to center -->
+            <div class="d-none d-lg-block" style="width: 150px"></div>
+
+            <!-- Centered Search -->
+            <form
+              class="d-flex mx-auto"
+              role="search"
+              style="max-width: 400px; width: 100%"
+            >
               <input
                 class="form-control me-2"
                 type="search"
@@ -73,6 +58,18 @@
                 Search
               </button>
             </form>
+
+            <!-- Navigation links -->
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign out</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
@@ -84,9 +81,9 @@
       <div
         class="container mt-5 pb-3 text-center border-bottom border-1 border-dark"
       >
-        <h1>Welcome to QuizzForge</h1>
+        <h3>Welcome to QuizzForge</h3>
         <p>Your one-stop solution for creating and taking quizzes.</p>
-        <button class="btn btn-success">Take random quizzes</button>
+        <button class="btn btn-primary">Take random quizzes</button>
       </div>
 
       <div class="container mt-5">
@@ -205,8 +202,8 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-white text-center py-2">
-        <!-- pad Y -->
+    <footer class="bg-dark text-white text-center py-1">
+      <!-- pad Y -->
       © 2025 QuizForge. All rights reserved.
     </footer>
 
