--- a/pages/category_manager.html
+++ b/pages/category_manager.html
@@ -51,7 +51,11 @@
     <!-- Main content -->
     <main class="container mt-5">
       <h3 class="mb-4">Category Manager</h3>
-      <button class="btn btn-primary mb-3">Add Category</button>
+      <!-- <button class="btn btn-primary mb-3">Add Category</button> -->
+      <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addCategoryModal">
+      Add Category
+    </button>
       <table
         class="table table-striped table-hover table-bordered border border-5"
       >
@@ -67,24 +71,24 @@
             <th scope="row">1</th>
             <td>📚 History</td>
             <td class="text-center">
-              <button class="btn btn-sm btn-edit me-2">Edit</button>
-              <button class="btn btn-sm btn-delete">Delete</button>
+              <button class="btn btn-sm btn-edit me-2" data-bs-toggle="modal" data-bs-target="#editCategoryModal">Edit</button>
+              <button class="btn btn-sm btn-delete" data-bs-toggle="modal" data-bs-target="#deleteCategoryModal">Delete</button>
             </td>
           </tr>
           <tr>
             <th scope="row">1</th>
             <td>📚 History</td>
             <td class="text-center">
-              <button class="btn btn-sm btn-edit me-2">Edit</button>
-              <button class="btn btn-sm btn-delete">Delete</button>
+              <button class="btn btn-sm btn-edit me-2" data-bs-toggle="modal" data-bs-target="#editCategoryModal">Edit</button>
+              <button class="btn btn-sm btn-delete" data-bs-toggle="modal" data-bs-target="#deleteCategoryModal">Delete</button>
             </td>
           </tr>
           <tr>
             <th scope="row">1</th>
             <td>📚 History</td>
             <td class="text-center">
-              <button class="btn btn-sm btn-edit me-2">Edit</button>
-              <button class="btn btn-sm btn-delete">Delete</button>
+              <button class="btn btn-sm btn-edit me-2" data-bs-toggle="modal" data-bs-target="#editCategoryModal">Edit</button>
+              <button class="btn btn-sm btn-delete" data-bs-toggle="modal" data-bs-target="#deleteCategoryModal">Delete</button>
             </td>
           </tr>
           <!-- Add more rows here as needed -->
@@ -111,6 +115,84 @@
           </li>
         </ul>
       </nav>
+      
+
+<!-- Modal -->
+<div class="modal fade" id="addCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="addCategoryModalLabel">Add category</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Add category</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Emoji</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- Edit modal -->
+     <!-- Add this below the "Add Category" modal -->
+<div class="modal fade" id="editCategoryModal" tabindex="-1" aria-labelledby="editCategoryModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="editCategoryModalLabel">Edit Category</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="editCategoryName" class="form-label">Category Name</label>
+            <input type="text" class="form-control" id="editCategoryName" placeholder="Enter category name">
+          </div>
+          <div class="mb-3">
+            <label for="editCategoryEmoji" class="form-label">Emoji</label>
+            <input type="text" class="form-control" id="editCategoryEmoji" placeholder="Enter emoji">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteCategoryModal" tabindex="-1" aria-labelledby="deleteCategoryModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deleteCategoryModalLabel">Confirm Delete</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this category?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
     </main>
 
     <!-- Footer -->
@@ -123,5 +205,6 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <script src="../js/category_manager.js"></script>
   </body>
 </html>
