--- a/pages/quizzes_manager.html
+++ b/pages/quizzes_manager.html
@@ -92,7 +92,7 @@
             <td>10 min</td>
             <td class="text-center">
               <button class="btn btn-sm btn-edit me-2">Edit</button>
-              <button class="btn btn-sm btn-delete">Delete</button>
+              <button class="btn btn-sm btn-delete" data-bs-toggle="modal" data-bs-target="#deleteQuizzModal">Delete</button>
             </td>
           </tr>
           <tr>
@@ -103,7 +103,7 @@
             <td>15 min</td>
             <td class="text-center">
               <button class="btn btn-sm btn-edit me-2">Edit</button>
-              <button class="btn btn-sm btn-delete">Delete</button>
+              <button class="btn btn-sm btn-delete" data-bs-toggle="modal" data-bs-target="#deleteQuizzModal">Delete</button>
             </td>
           </tr>
           <!-- More rows as needed -->
@@ -130,6 +130,25 @@
           </li>
         </ul>
       </nav>
+
+      <!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteQuizzModal" tabindex="-1" aria-labelledby="deleteQuizzModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deleteQuizzModalLabel">Confirm Delete</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this Quizz?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" id="confirmDeleteQuizzButton">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
     </main>
 
     <!-- Footer -->
