done day 4_ decentralization and validation

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
       >
         <div class="container-fluid">
           <!-- left -->
-          <a class="navbar-brand" href="#">QuizzForge</a>
+          <a class="navbar-brand" href="home.html">QuizzForge</a>
 
           <button
             class="navbar-toggler"
@@ -67,7 +67,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sign out</a>
+                <a class="nav-link" href="./register_login.html">Sign out</a>
               </li>
             </ul>
           </div>
