--- a/pages/home.html
+++ b/pages/home.html
@@ -67,7 +67,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./register_login.html">Sign out</a>
+                <a class="nav-link" href="#" id="logout-btn">Sign out</a>
               </li>
             </ul>
           </div>
@@ -212,5 +212,9 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <script src="../js/auth.js"></script>
+    <script>
+      checkLoginStatus(); // Check login status on page load
+    </script>
   </body>
 </html>
