enhanch saving to local in cate and login

--- a/pages/home.html
+++ b/pages/home.html
@@ -131,7 +131,7 @@
               <div class="row g-0 align-items-center">
                 <div class="col-auto">
                   <img
-                    src="https://via.placeholder.com/100"
+                    src="../assets/img/2683.webp"
                     class="img-fluid rounded-start"
                     alt="Quiz thumbnail"
                     style="width: 100px; height: 100px; object-fit: cover"
@@ -158,7 +158,7 @@
               <div class="row g-0 align-items-center">
                 <div class="col-auto">
                   <img
-                    src="https://via.placeholder.com/100"
+                    src="../assets/img/2683.webp"
                     class="img-fluid rounded-start"
                     alt="Quiz thumbnail"
                     style="width: 100px; height: 100px; object-fit: cover"
