small adjustment (sign out => log out}

--- a/pages/home.html
+++ b/pages/home.html
@@ -67,7 +67,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" id="logout-btn">Sign out</a>
+                <a class="nav-link" href="#" id="logout-btn">Log out</a>
               </li>
             </ul>
           </div>
