--- a/pages/category_manager.html
+++ b/pages/category_manager.html
@@ -81,7 +81,7 @@
       <!-- Pagination -->
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
+          <!-- <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">&laquo;</a>
           </li>
           <li class="page-item active">
@@ -95,7 +95,7 @@
           </li>
           <li class="page-item">
             <a class="page-link" href="#">&raquo;</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
       
