--- a/pages/register_login.html
+++ b/pages/register_login.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuizzForge</title>
     <link
+      href="
+      https://cdn.jsdelivr.net/npm/sweetalert2@11.21.0/dist/sweetalert2.min.css
+      "
+      rel="stylesheet"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
@@ -23,22 +29,24 @@
       <div class="form-box login">
         <h2 class="animation" style="--i: 1">Login</h2>
         <p class="animation" style="--i: 2">
-          &nbsp;QuizForge is an interactive online quiz platform that lets you easily
-          design, share, and take quizzes quickly and effectively!
+          &nbsp;QuizForge is an interactive online quiz platform that lets you
+          easily design, share, and take quizzes quickly and effectively!
         </p>
         <div class="input-box animation" style="--i: 2">
-          <input type="text" placeholder=" " required id="login-username"/>
+          <input type="text" placeholder=" " required id="login-username" />
           <label>Username</label>
           <i class="bx bx-user"></i>
           <p id="login-username-error"></p>
         </div>
         <div class="input-box animation" style="--i: 3">
-          <input type="password" placeholder=" " required id="login-password"/>
+          <input type="password" placeholder=" " required id="login-password" />
           <label>Password</label>
           <i class="bx bx-lock-alt"></i>
           <p id="login-password-error"></p>
         </div>
-        <button id="login-btn" class="btn animation" style="--i: 4">Login</button>
+        <button id="login-btn" class="btn animation" style="--i: 4">
+          Login
+        </button>
         <div class="login-register animation" style="--i: 5">
           <p>
             Don't have an account?
@@ -55,30 +63,37 @@
           design, share, and take quizzes quickly and effectively!
         </p>
         <div class="input-box animation" style="--i: 2">
-          <input type="text" placeholder="" required id="reg-username"/>
+          <input type="text" placeholder="" required id="reg-username" />
           <label>Username</label>
           <i class="bx bx-user"></i>
           <p id="reg-username-error"></p>
         </div>
         <div class="input-box animation" style="--i: 3">
-          <input type="email" placeholder="" required id="reg-email"/>
+          <input type="email" placeholder="" required id="reg-email" />
           <label>Email</label>
           <i class="bx bx-envelope"></i>
           <p id="reg-email-error"></p>
         </div>
         <div class="input-box animation" style="--i: 4">
-          <input type="password" placeholder="" required id="reg-password"/>
+          <input type="password" placeholder="" required id="reg-password" />
           <label>Password</label>
           <i class="bx bx-lock-alt"></i>
           <p id="reg-password-error"></p>
         </div>
         <div class="input-box animation" style="--i: 4">
-          <input type="password" placeholder="" required id="reg-confirm-password"/>
+          <input
+            type="password"
+            placeholder=""
+            required
+            id="reg-confirm-password"
+          />
           <label>Confirm Password</label>
           <i class="bx bx-lock-alt"></i>
           <p id="reg-confirm-password-error"></p>
         </div>
-        <button id="reg-btn" class="btn animation" style="--i: 5">Register</button>
+        <button id="reg-btn" class="btn animation" style="--i: 5">
+          Register
+        </button>
         <div class="login-register animation" style="--i: 6">
           <p>
             Already have an account? <a href="#" class="login-link">Login</a>
@@ -88,28 +103,50 @@
     </div>
 
     <!-- Registration Success Modal -->
-<div class="modal fade" id="registrationSuccessModal" tabindex="-1" aria-labelledby="registrationSuccessModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="registrationSuccessModalLabel">Success</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Registration successful! You can now log in.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+    <div
+      class="modal fade"
+      id="registrationSuccessModal"
+      tabindex="-1"
+      aria-labelledby="registrationSuccessModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="registrationSuccessModalLabel">
+              Success
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            Registration successful! You can now log in.
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+            >
+              OK
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <script src="
+      https://cdn.jsdelivr.net/npm/sweetalert2@11.21.0/dist/sweetalert2.all.min.js
+      "></script>
     <script src="../js/register_login.js"></script>
   </body>
 </html>
