--- a/pages/quizzes_manager.html
+++ b/pages/quizzes_manager.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Manager</title>
     <link
+      href="
+      https://cdn.jsdelivr.net/npm/sweetalert2@11.21.0/dist/sweetalert2.min.css
+      "
+      rel="stylesheet"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
@@ -52,9 +58,8 @@
     <main class="container mt-5">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h3 class="m-0">Quiz Manager</h3>
-        <button class="btn btn-primary">Add Quiz</button>
-      </div>
-
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addQuizModal">Add Quiz</button>
+        </div>
       <div class="d-flex justify-content-end mb-3 gap-2">
         <select class="form-select w-auto">
           <option selected>Sort by</option>
@@ -84,7 +89,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <th scope="row">1</th>
             <td>History Quiz</td>
             <td>📚 History</td>
@@ -105,7 +110,7 @@
               <button class="btn btn-sm btn-edit me-2">Edit</button>
               <button class="btn btn-sm btn-delete" data-bs-toggle="modal" data-bs-target="#deleteQuizzModal">Delete</button>
             </td>
-          </tr>
+          </tr> -->
           <!-- More rows as needed -->
         </tbody>
       </table>
@@ -113,7 +118,7 @@
       <!-- Pagination -->
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
+          <!-- <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">&laquo;</a>
           </li>
           <li class="page-item active">
@@ -127,7 +132,7 @@
           </li>
           <li class="page-item">
             <a class="page-link" href="#">&raquo;</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
 
@@ -149,6 +154,89 @@
     </div>
   </div>
 </div>
+  <!-- Add Quiz Modal -->
+<div class="modal fade" id="addQuizModal" tabindex="-1" aria-labelledby="addQuizModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="addQuizModalLabel">Add Quiz</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="addQuizName" class="form-label">Quiz Name</label>
+            <input type="text" class="form-control" id="addQuizName">
+            <div id="add_name_error"></div>
+          </div>
+          <div class="mb-3">
+            <label for="addQuizCategory" class="form-label">Category</label>
+            <select class="form-select" id="addQuizCategory">
+              <!-- Options will be dynamically populated -->
+            </select>
+            <div id="add_category_error"></div>
+          </div>
+          <div class="mb-3">
+            <label for="addQuizQuestions" class="form-label">Number of Questions</label>
+            <input type="number" class="form-control" id="addQuizQuestions">
+            <div id="add_questions_error"></div>
+          </div>
+          <div class="mb-3">
+            <label for="addQuizDuration" class="form-label">Duration (minutes)</label>
+            <input type="number" class="form-control" id="addQuizDuration">
+            <div id="add_duration_error"></div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success" id="btn-submit-add">Add</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Edit Quiz Modal -->
+<div class="modal fade" id="editQuizModal" tabindex="-1" aria-labelledby="editQuizModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="editQuizModalLabel">Edit Quiz</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="editQuizName" class="form-label">Quiz Name</label>
+            <input type="text" class="form-control" id="editQuizName">
+            <div id="edit_name_error"></div>
+          </div>
+          <div class="mb-3">
+            <label for="editQuizCategory" class="form-label">Category</label>
+            <select class="form-select" id="editQuizCategory">
+              <!-- Options will be dynamically populated -->
+            </select>
+            <div id="edit_category_error"></div>
+          </div>
+          <div class="mb-3">
+            <label for="editQuizQuestions" class="form-label">Number of Questions</label>
+            <input type="number" class="form-control" id="editQuizQuestions">
+            <div id="edit_questions_error"></div>
+          </div>
+          <div class="mb-3">
+            <label for="editQuizDuration" class="form-label">Duration (minutes)</label>
+            <input type="number" class="form-control" id="editQuizDuration">
+            <div id="edit_duration_error"></div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-warning" id="btn-submit-edit">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
     </main>
 
     <!-- Footer -->
@@ -156,12 +244,16 @@
       © 2025 QuizForge. All rights reserved.
     </footer>
 
+    <script src="
+      https://cdn.jsdelivr.net/npm/sweetalert2@11.21.0/dist/sweetalert2.all.min.js
+      "></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
     <script src="../js/auth.js"></script>
+    <script src="../js/quizzes_manager.js"></script>
     <script>
       checkLoginStatus(); // Check login status on page load
     </script>
