--- a/pages/quizzes_manager.html
+++ b/pages/quizzes_manager.html
@@ -62,12 +62,12 @@
         
       </div>
       <div class="d-flex justify-content-end mb-3 gap-2">
-        <select class="form-select w-auto">
-          <option selected>Sort by</option>
-          <option value="1">Name</option>
-          <option value="2">Category</option>
-          <option value="3">Questions</option>
-          <option value="4">Duration</option>
+        <select class="form-select w-auto" id="sortDropdown">
+          <option value="" selected disabled>Sort by</option>
+          <option value="name">Name</option>
+          <option value="category">Category</option>
+          <option value="questions">Questions</option>
+          <option value="duration">Duration</option>
         </select>
         <input
           type="text"
