--- a/pages/home.html
+++ b/pages/home.html
@@ -124,7 +124,7 @@
         </div>
 
         <!-- Quiz Cards Grid -->
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-md-2 g-3" id="quiz_cards">
           <!-- Repeat this .col for each quiz -->
           <div class="col">
             <div class="card h-100 border-0 shadow-sm">
@@ -213,6 +213,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="../js/auth.js"></script>
+    <script src="../js/home.js"></script>
     <script>
       checkLoginStatus(); // Check login status on page load
     </script>
