--- a/pages/quizzes_manager.html
+++ b/pages/quizzes_manager.html
@@ -16,6 +16,10 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css"
+    />
     <link rel="stylesheet" href="../css/quizzes_manager.css" />
   </head>
   <body>
