done with the questions and quizzes manager

--- a/pages/home.html
+++ b/pages/home.html
@@ -126,7 +126,7 @@
         <!-- Quiz Cards Grid -->
         <div class="row row-cols-1 row-cols-md-2 g-3" id="quiz_cards">
           <!-- Repeat this .col for each quiz -->
-          <div class="col">
+          <!-- <div class="col">
             <div class="card h-100 border-0 shadow-sm">
               <div class="row g-0 align-items-center">
                 <div class="col-auto">
@@ -149,11 +149,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- end .col -->
 
           <!-- Example second card -->
-          <div class="col">
+          <!-- <div class="col">
             <div class="card h-100 border-0 shadow-sm">
               <div class="row g-0 align-items-center">
                 <div class="col-auto">
@@ -176,7 +176,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- end .col -->
 
           <!-- add more .col as needed… -->
