--- a/pages/home.html
+++ b/pages/home.html
@@ -107,7 +107,7 @@
 
           <!-- Sort controls left-aligned below -->
           <div class="col-12 col-md-6">
-            <small class="me-2">Sort by:</small>
+            <small class="me-2">Sort by play time:</small>
             <div
               class="btn-group btn-group-sm"
               role="group"
@@ -184,9 +184,9 @@
         <!-- end .row -->
 
         <!-- Pagination -->
-        <nav aria-label="Quiz page navigation" class="mt-4">
+        <nav aria-label="Quiz page navigation" class="m-4">
           <ul class="pagination justify-content-center mb-0">
-            <li class="page-item disabled">
+            <!-- <li class="page-item disabled">
               <a class="page-link" href="#" tabindex="-1"> &lt;</a>
             </li>
             <li class="page-item active">
@@ -196,7 +196,7 @@
             <li class="page-item"><a class="page-link" href="#">3</a></li>
             <li class="page-item">
               <a class="page-link" href="#">&gt;</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </div>
